# prototype

./: .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  0.NOTE.md  0.ray_core.function.py  1.ray_core.actor.py  1B_qlora_single_4GB_gpu.yaml  AGENTS.md  CMakeLists.txt  Makefile  Makefile.Llama-3.2-1B-Instruct  Makefile.T1.plain  Makefile.T1.plain.old_CMake  Makefile.T1.uvx  Makefile.T1.uvx.old_CMake  README.md  URL.lst  analysis.ipynb  design.py  design_document.md  envrc  eval_and_log  example.py  gemma.log.make.sh  hello.ai-edge-litert.py  hello.tflite-runtime.py  kpt_retrospective.md  lessons_learned.md  main.py  make.model.tflite.py  pre-commit-config.yaml  pyproject.toml  run.sh  sample.cpp  sample.py  show-model-info.sh  test.json  z.gemma.py
.cline/skills/gh/: SKILL.md
.clinerules/: LOCAL_RULE.md
.clinerules/hooks/: TaskStart
.clinerules/workflows/: TEST.md
.gemini/commands/: summarize.toml
.gemini/commands/gh/: feedback.toml  read_issue.toml
.gemini/policies/: gh-rules.toml
.github/workflows/: Pull.yml  pull_reqeust.default.yml
.serena/: project.yml
X/: RULE.md
X/Y/: RULE.md
X/Y/src/: sample.cpp
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
case1/: 0.prompt  qwen3-0.6b.response  qwen3-1.7b.response  qwen3-4b.response
cmake/: ExternalSourceConfig.cmake  SampleConfig.cmake
contrib/: CMakeLists.txt
contrib/cafferun/: CMakeLists.txt  cafferun.cpp
contrib/tfliterun/: CMakeLists.txt
contrib/tfliterun/src/: tflite.cpp
docs/: 00.DESIGN.md  01.WORK_PLAN.md  FUTURE_ITEMS.md
docs/reports/: 01.PHASE1_TEST_REPORT.md  02.PHASE2_TEST_REPORT.md  03.PHASE3_TEST_REPORT.md
examples/: .gitignore  CREATE_DISCUSSION.graphql  GET_NODE_TYPE_BY_NUMBER_OF_DISCUSSION.graphql  GET_NODE_TYPE_BY_NUMBER_OF_ISSUE.graphql  LIST_PROJECT.graphql  SEARCH_DISCUSSION.graphql  addProjectV2DraftIssue.graphql
examples/2026-01-14/: 0.README.md  A.getSingleSelectField.graphql  B.getProjectV2Items.graphql  C.updateProjectV2ItemFieldValue.graphql
frameworks/: CMakeLists.txt  caffe.cmake  tensorflow.cmake
gradle/wrapper/: gradle-wrapper.properties
include/: hello.h
libs/nn/: CMakeLists.txt
libs/nn/include/nnkit/nn/tensor/: Index.h  IndexIterator.h  Reader.h  Shape.h
libs/nn/src/tensor/: Index.cpp  Index.test.cpp  IndexIterator.cpp  IndexIterator.test.cpp  Reader.cpp  Shape.cpp  Shape.test.cpp
models/: qwen3-0.6b  qwen3-1.7b  qwen3-4b
src/automate_article_triage/: __init__.py
src/chat_from_github_issue/: __init__.py
src/github_graphql/: __init__.py
src/my/: __init__.py
src/my/X/: 1  __init__.py
src/octopith/cli/: main.py
src/octopith/db/: constants.py  manager.py  models.py  schema.sql  store.py
src/python_dataclass/: __init__.py
src/recipe_design/: __init__.py
src/sample/: __init__.py  _core.cpp
src/telegram_bot/: __init__.py  __main__.py
template/: envrc.local
tests/: test_inference.py  test_sample.py  test_summarizer.py  test_sync_engine.py
z.failed/: pyproject.hatch.toml  pyproject.setuptools.toml
z.ref/: pyproject.toml.with_hatch
z.ref/cpp/: CMakeLists.txt  example.cpp
(+16 files in other folders)
